add max bot
